# db-adapter

./: .gitignore  CLAUDE.md  PROJECT_STATE.md  README.md  agents.md  column-defs.json  pyproject.toml  schema.sql
docs/: core-backup-cli-design.md  core-cli-counts-design-review.md  core-cli-counts-design.md  core-cli-counts-plan-review.md  core-cli-counts-plan.md  core-cli-counts-results.md  core-cli-fix-design-review.md  core-cli-fix-design.md  core-cli-fix-plan-review.md  core-cli-fix-plan.md  core-cli-fix-results.md  core-cli-unify-design-review.md  core-cli-unify-design.md  core-cli-unify-plan-review.md  core-cli-unify-plan.md  core-cli-unify-results.md  core-hardening-design-review.md  core-hardening-design.md  core-hardening-plan-review.md  core-hardening-plan.md  core-hardening-results.md  core-lib-extraction-design.md  core-lib-extraction-plan-review.md  core-lib-extraction-plan.md  core-lib-extraction-results.md  db-adapter-lib-extraction.md  examiner-audit-mc-comparison.md  importlib-reload-class-identity.md
tests/: test_hardening_cli_split.py  test_hardening_fk_preflight.py  test_hardening_restore_failure_details.py  test_hardening_transaction.py  test_hardening_transaction_consumers.py  test_lib_extraction_adapters.py  test_lib_extraction_backup.py  test_lib_extraction_cli.py  test_lib_extraction_comparator.py  test_lib_extraction_config.py  test_lib_extraction_exports.py  test_lib_extraction_factory.py  test_lib_extraction_final.py  test_lib_extraction_fix.py  test_lib_extraction_imports.py  test_lib_extraction_introspector.py  test_lib_extraction_models.py  (+2 more)
(+33 files in other folders)
