[project]
name = "db-adapter"
version = "0.1.0"
description = "Async dict-based database adapter with Protocol typing, multi-profile config, schema management CLI, and backup/restore."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
supabase = ["supabase>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
db-adapter = "db_adapter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db_adapter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
